# Basketball_Data_Visualization

./: .gitignore  Basketball_Data_Visualization.pro  Design summary of information.txt  Laptop Config.txt  README.md  classDesign.cpp  data.cpp  data.h  vim.exe.stackdump
NBA/: game  items.json  scrapy.cfg
NBA/NBA/: items.py  middlewares.py  pipelines.py  settings.py
NBA/data/: 17-18赛季,2018年4月27日,多伦多猛龙102-92华盛顿奇才的比赛数据和文字记录.json  17-18赛季,2018年4月29日,印第安纳步行者101-105克里夫兰骑士的比赛数据和文字记录.json  17-18赛季,2018年5月1日,克里夫兰骑士113-112多伦多猛龙的比赛数据和文字记录.json  teams.rar
app/: main.cpp
command/base/: command.h
command/inherit/: openfile.h
commands/: allcommand.h
commands/base/: command.cpp  command.h  parameters.h
commands/inherit/: openfile.cpp  playerDataCommand.cpp  playerDataCommand.h  playerRankCommand.cpp  playerRankCommand.h  teamDataCommand.cpp  teamDataCommand.h  teamRankCommand.cpp  (+1 more)
common/: common.h  dataType.h  receiver.h  sender.cpp  sender.h
doc/: app层报告(总报告).docx  app报告(总报告).docx  app报告.md  model报告.docx  model报告.md  viewModel报告.docx  viewModel报告.md  view报告.docx  梁家宁-个人报告.md
model/: CMakeLists.txt  Makefile  ability.h  data.cpp  data.h  json.cpp  main.cpp  model.cpp  model.h  read.cpp
resources/: resources.qrc
view/: myLabel.cpp  myLabel.h  pageData.cpp  pageData.h  pageData.ui  pagePlayer.cpp  pagePlayer.h  pagePlayer.ui  pageRank.cpp  pageRank.h  pageRank.ui  pageStart.cpp  pageStart.h  pageStart.ui  pageTeam.cpp  pageTeam.h  pageTeam.ui  playertablemodel.cpp  playertablemodel.h  view.cpp  view.h  view.ui
viewmodel/: viewmodel.cpp  viewmodel.h
(+620 files in other folders)
